// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameContainer should match snapshot 1`] = `
<main>
  <Connect(FlagCard)
    correctClass="positionB"
    flagsGuessed={Array []}
    handleButtonClass={[Function]}
    handleGuess={[Function]}
    wrongClass="positionA"
  />
  <Link
    className="router-link"
    to="/"
  >
    <p>
      ⏎ Start Over
    </p>
  </Link>
</main>
`;

exports[`GameContainer should match snapshot when class names change for answer buttons 1`] = `
<main>
  <Connect(FlagCard)
    correctClass="positionA"
    flagsGuessed={Array []}
    handleButtonClass={[Function]}
    handleGuess={[Function]}
    wrongClass="positionB"
  />
  <Link
    className="router-link"
    to="/"
  >
    <p>
      ⏎ Start Over
    </p>
  </Link>
</main>
`;
